syntax = 'proto3';

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option go_package = "./grpcbenchmark";

package grpcbenchmark;

service  CoreBanking{

    rpc EchoAccount (Account) returns (Account);
}

message AccountId{
    bytes accountId=1;
}
message Account {

    AccountId accountId=1;
    string name=2;
    uint64 balance=3;

}
